--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+<meta name="google-site-verification" content="v-JCzZe3zFWHcjtfT_a_PxZVfMIVJO5_NTHOhiptov8" />
+<meta name="naver-site-verification" content="3819d275dd333072bade0d26fb0eff0f736639bc" />  
     
     
     <title>당신의 돈을 지켜라! 차량보험 호갱 안 되는 절약 가이드 링크</title>
@@ -555,4 +556,5 @@
 
 </body>
 </html>
+
 
